# ardupilot_gazebo

./: .gitignore  CMakeLists.txt  Profile.txt  README.md  data.csv
ardupilot_extra/: Profile.ods  Profile.txt  clean_data.txt  joy.py  joystick_test.py  sitl_interface.py
ardupilot_extra/logs/test_121/: ReadMe.txt
ardupilot_extra/logs/test_124/: ReadMe.txt
ardupilot_extra/rail_sim_pos_cont_model/: model.m
ardupilot_extra/tether_control_model/: model  model.py  server.py
gazebo_models/camera/: model.sdf
gazebo_models/gimbal_small_2d/: model.sdf
gazebo_models/ground_plane/: model.sdf
gazebo_models/hokuyo/: model.sdf
gazebo_models/iris_with_lidar/: model.sdf
gazebo_models/iris_with_standoffs/: model.sdf
gazebo_models/iris_with_standoffs_demo/: model.sdf
gazebo_models/rail_system/: model.config  model.sdf
gazebo_models/sun2/: model.sdf
gazebo_worlds/: iris_ardupilot.world  iris_irlock_demo.world  iris_irlock_demo_simple_wind.world  iris_irlock_demo_wind_sine.world  iris_irlock_nocam_rail_sim.world  iris_irlock_rail_sim.world  rail_sim.world
include/: AnglePlugin.hh  ArduCopterIRLockPlugin.hh  GUI_ResetWorld.hh  LiftDragPlugin.hh  Profile.hh  RailSimPlugin.hh  TetherPullPlugin.hh  WindPlugin.hh
models/iris_with_standoffs/: model.sdf
models/iris_with_standoffs_demo/: model.sdf
msgs/: CMakeLists.txt
scripts/: gazebo-iris.parm
scripts/AnglePluginDebug/: IR_data_X.csv  IR_data_moving_tar.csv  data_vis.py  normtest_2.csv
scripts/AnglePluginDebug/NormTest/: norm_test.py  normtest.csv  normtest_3.csv  normtest_4.csv
scripts/AnglePluginDebug/PluginDataTest/: AnglePlugin_X.csv  AnglePlugin_Y_2.csv  IR_data.csv  ReadMe.md  data.csv  data_moving_tar.csv  data_vis.py  time.csv  working_IR_data.csv
scripts/Boat Profile/: data.txt
scripts/SITL Interface/: config.json  sitl_interface.py  startup.sh
scripts/SITLInterface/: joy.py  sitl_interface.py  startup.sh  startup_sitl
scripts/rail_sim_pos_cont_model/: model.m
scripts/tether_control_model/: model.py
src/: AnglePlugin.cc  ArduCopterIRLockPlugin.cc  ArduPilotPlugin.cc  GUI_ResetWorld.cc  RailSimPlugin.cc  TetherPullPlugin.cc  WindPlugin.cc
worlds/: iris_ardupilot.world
